// Vitest Snapshot v1
<<<<<<<< HEAD:frontend/src/components/layout/Footer/__snapshots__/Footer.spec.tsx.snap
========

exports[`Footer > renders correctly 1`] = `
<nav
  className="footer navbar navbar-expand navbar-light"
>
  <a
    className="nav-link"
    disabled={false}
    href="http://www.gov.bc.ca/gov/content/home/disclaimer"
    onClick={[Function]}
  >
    Disclaimer
  </a>
  <a
    className="nav-link"
    disabled={false}
    href="http://www.gov.bc.ca/gov/content/home/privacy"
    onClick={[Function]}
  >
    Privacy
  </a>
  <a
    className="nav-link"
    disabled={false}
    href="http://www.gov.bc.ca/gov/content/home/accessible-government"
    onClick={[Function]}
  >
    Accessibility
  </a>
  <a
    className="nav-link"
    disabled={false}
    href="http://www.gov.bc.ca/gov/content/home/copyright"
    onClick={[Function]}
  >
    Copyright
  </a>
</nav>
`;
>>>>>>>> ef22e273 (Changed jest to vitest, 17 tests failing):frontend/src/components/layout/Footer/__snapshots__/Footer.test.tsx.snap

exports[`Footer > renders correctly 1`] = `
<nav
  className="footer navbar navbar-expand navbar-light"
>
  <a
    className="nav-link"
    disabled={false}
    href="http://www.gov.bc.ca/gov/content/home/disclaimer"
    onClick={[Function]}
  >
    Disclaimer
  </a>
  <a
    className="nav-link"
    disabled={false}
    href="http://www.gov.bc.ca/gov/content/home/privacy"
    onClick={[Function]}
  >
    Privacy
  </a>
  <a
    className="nav-link"
    disabled={false}
    href="http://www.gov.bc.ca/gov/content/home/accessible-government"
    onClick={[Function]}
  >
    Accessibility
  </a>
  <a
    className="nav-link"
    disabled={false}
    href="http://www.gov.bc.ca/gov/content/home/copyright"
    onClick={[Function]}
  >
    Copyright
  </a>
</nav>
`;
